syntax = "proto3";

option java_package = "org.oliverlittle.clusterprocess";

import "table_model.proto";
import "data_source.proto";

service WorkerComputeService {
    // Computes a partial result
    rpc ComputePartialResultCassandra(ComputePartialResultCassandraRequest) returns (ComputePartialResultCassandraResult);
}

message ComputePartialResultCassandraRequest {
    Table table = 1;
    CassandraDataSource dataSource = 2;
    CassandraTokenRange tokenRange = 3;
}

message ComputePartialResultCassandraResult {
    bool success = 1;
}